=======================================================
Date: 02/09/2016 - 10:30
Commit Tag: Enemy + Collision + Ground Additions
User: JaredP94
Details: Added Enemy + Ground objects + collisions
Issues: Glitch in ground rendering currently

=======================================================
Date: 02/09/2016 - 10:20
Commit Tag: AssetManager Test
User: Matty-Westside
Details: Added AssetManager Test + Test .exe + Updated gitignore + Added test image

=======================================================

Date: 31/08/2016 - 08:00
Commit Tag: Removed MoveableEntity.h + Cleaned Player.h code
User: JaredP94
Details: Removed MoveableEntity to simply inheritance structure + deleted commented old from Player.h that is no longer used

=======================================================

Date: 30/08/2016 - 10:25
Commit Tag: Code Readability + Additional Refactor
User: JaredP94
Details: Improved code readability + Improved Refactoring of assetManager

=======================================================

Date: 29/08/2016 - 20:20
Commit Tag: DLL commit
User: JaredP94
Details: Edited .gitignore to include dll files for exe to run + committed SFML dll files

=======================================================

Date: 29/08/2016 - 19:25
Commit Tag: Exe Commit + AssetManager Refactor
User: JaredP94
Details: Edited .gitignore to include main .exe for commits + Refactored AssetManager templates

=======================================================

Date: 29/08/2016 - 17:40
Commit Tag: Player Bounds Functionality + Image Changed
User: JaredP94
Details: Fixed player going out of screen's right bounds + Changed player image

=======================================================

Date: 29/08/2016 - 12:55
Commit Tag: Pause/Esc functionality
User: JaredP94
Details: Fixed ability to pause game + Fixed exit game ability using Esc + fixed text display area

=======================================================

Date: 29/08/2016 - 12:35
Commit Tag: Initial Commit